# scoutty

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
docs/assets/: scoutty.tape
nix/: checks.nix  default.nix  devshells.nix  foot-test.nix  formatter.nix  meta.nix  packages.nix  scoutty.nix
src/: error.rs  hex.rs  lib.rs  main.rs  output.rs  pager.rs  parser.rs  probe.rs  probes.rs  tty.rs
src/probes/: colors.rs  geometry.rs  graphics.rs  identity.rs  keyboard.rs  modes.rs
