[package]
name = "scoutty"
version = "0.1.0"
edition = "2024"
description = "Probe your terminal's capabilities"
license = "MIT"
repository = "https://github.com/a-kenji/scoutty"
homepage = "https://github.com/a-kenji/scoutty"
authors = ["Alexander Kenji Berthold"]
keywords = ["terminal", "escape-sequences", "capabilities", "tty", "vt100"]
categories = ["command-line-utilities", "os::unix-apis"]

[dependencies]
clap = { version = "4.5.60", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
  "error-context",
] }
clap_complete = "4.5.66"
nix = { version = "0.31.2", features = ["term", "poll", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
vte = "0.15.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
